crates/toml_edit/tests/snapshots/invalid/key/multiline-key-03.stderr
TOML parse error at line 1, column 3
  |
1 | """key""" = """v"""
  |   ^
expected `.`, `=`
